<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#FFFFFF" >

    <TextView
        android:text="@string/select_difficulty"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <Button
        android:id="@+id/btnEasy"
        android:text="@string/level_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/easyColor"
        />

    <Button
        android:id="@+id/btnMedium"
        android:text="@string/level_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/mediumColor"
        />

    <Button
        android:id="@+id/btnHard"
        android:text="@string/level_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/hardColor"
        />
</LinearLayout>
